--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,11 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Gilroy';
+  src: url('font/Gilroy-Regular.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+}
+body{
+  font-family: 'Gilroy';
 }
