--- a/src/Transactions.css
+++ b/src/Transactions.css
@@ -1,29 +1,40 @@
 /* Style for the transactions container */
 .transactions-container {
-    margin-top: 20px;
+    margin-top: 60px;
   }
   
 /* Style for the transaction item */
-.transaction-item {
-    border: 1px solid #ccc;
-    border-radius: 5px;
+.transaction-all-details {
+    
     padding: 10px;
     margin-bottom: 10px;
-  }
+}
+
   
-  /* Style for the transaction item's title */
-  .transaction-title {
+/* Style for the transaction item's title */
+.transaction-title {
     font-size: 18px;
     margin-bottom: 5px;
-  }
+}
   
-  /* Style for the transaction details */
-  .transaction-details {
+/* Style for the transaction details */
+.transaction-details {
     margin-bottom: 5px;
-  }
+}
+
+.transaction-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 90vw ;
+    max-width: 1200px;
+    margin: 0 auto;
+}
   
-  /* Style for the buttons */
-  .transaction-button {
+/* Style for the buttons */
+.transaction-button {
     margin-right: 10px;
     padding: 5px 10px;
     cursor: pointer;
@@ -33,22 +44,22 @@
     color: #fff;
     font-size: 14px;
     transition: background-color 0.3s ease;
-    
-  }
+    width: 80px;
+}
   
-  .transaction-button:hover {
+.transaction-button:hover {
     background-color: #0056b3;
-  }
+}
   
-  /* Style for the delete button */
-  .delete-button {
+/* Style for the delete button */
+.delete-button {
     background-color: #dc3545;
-  }
+}
   
-  .delete-button:hover {
+.delete-button:hover {
     background-color: #c82333;
-  }
+}
   
-  .transaction-header {
+.transaction-header {
     text-align: center;
-  }
+}
