--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     background-color: #94afd3;
 }
   
+
+.chart-container {
+    width: 90vw ;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    margin:auto
+  }
+  
