--- a/src/Transactions.css
+++ b/src/Transactions.css
@@ -41,7 +41,7 @@
     border: none;
     border-radius: 3px;
     background-color: #007bff;
-    color: #fff;
+    color: #100e0e;
     font-size: 14px;
     transition: background-color 0.3s ease;
     width: 80px;
